<resources>
    <string name="app_name">CEIS</string>
    <string name="name_event">CEIS</string>
    <string name="type_conf">CONF24</string>
    <string name="action_login">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--  <string name="hello_blank_fragment">Hello blank fragment</string> -->
    <string name="ceis">CEIS.</string>
    <string name="conf">conf</string>
    <string name="backstage">backStage</string>
    <string name="info_ceis_conf_date">12–15 NOV, 2024, TARAPOTO - PERÚ</string>
    <string name="alert_send">Si ya te registraste en la CEIS.conf 2024, ingresa tu número de DNI aquí.</string>
    <string name="dni">DNI*</string>
    <string name="join_now">UNIRSE AHORA</string>
    <string name="generate_code">GENERAR CODIGO</string>
    <string name="alert_problem_login">en caso de problemas, comunicarse con el staff*</string>
    <string name="alert_problem_generate_code">en caso de problemas, comunicarse con la directiva*</string>
    <string name="custom_experience">Personalizaremos tu experiencia</string>
    <string name="get_basic_information">Otorganos esta informacion basica.</string>
    <string name="finish_data_basic_information">continuar</string>
    <string name="full_name">Nombre completo*</string>
    <string name="nick_name">Apodo*</string>
    <string name="choose_avatar">Escoge un avatar*</string>
    <string name="share">share</string>
    <string name="dash">dash</string>
    <string name="sellar_asistencia">SELLAR ASISTENCIA</string>
    <string name="codegenerator">codeGenerator</string>
    <string name="message_generate_code">Ingrese el número de DNI para generar el código de la web.</string>
    <string name="alert_generate_code">Generador de código</string>
    <string name="citse">CITSE</string>
</resources>