<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/blue_50"
    tools:context=".presentation.login_management.view.BasicInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            android:orientation="horizontal"
            android:id="@+id/ll_header_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/blue_600"
                android:textSize="@dimen/_19ssp"
                android:fontFamily="@font/dm_sans_black"
                android:text="@string/ceis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/blue_900"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/geist_mono_black"
                android:text="@string/conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/ll_header_login"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/orange"
            android:textSize="@dimen/_8ssp"
            android:fontFamily="@font/dm_sans_regular"
            android:text="@string/custom_experience"
            android:id="@+id/info_ceis_conf_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/info_ceis_conf_date"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/blue_900"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/get_basic_information"
            android:id="@+id/alert_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/alert_login"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical"
            android:id="@+id/ll_information_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="@color/blue_900"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/choose_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingVertical="@dimen/_10sdp"
                    android:id="@+id/rvListAvatars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/blue_900"
                app:hintAnimationEnabled="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:hint="@string/full_name"
                android:textColorHint="@color/blue_900"
                android:id="@+id/tl_full_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/cf_background_input"
                    android:inputType="textAutoComplete"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:textColorHighlight="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:id="@+id/tf_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/blue_900"
                app:hintAnimationEnabled="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:hint="@string/nick_name"
                android:textColorHint="@color/blue_900"
                android:id="@+id/tl_nick_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/cf_background_input"
                    android:inputType="textAutoComplete"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:fontFamily="@font/dm_sans_medium"
                    android:textColorHighlight="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tf_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            app:backgroundTint="@null"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/ll_information_text"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            android:text="@string/finish_data_basic_information"
            android:textSize="@dimen/_9ssp"
            android:textAllCaps="true"
            android:paddingBottom="7dp"
            android:background="@drawable/cf_background_button"
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"/>

        <androidx.constraintlayout.widget.Guideline
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            app:layout_constraintGuide_percent="0.95"
            android:orientation="vertical"
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            app:layout_constraintGuide_percent="0.97"
            android:orientation="horizontal"
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            app:layout_constraintGuide_percent="0.03"
            android:orientation="horizontal"
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>