<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/blue_50"
    tools:context=".presentation.event_management.view.GenerateCodeAssistanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLIA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                android:visibility="invisible"
                android:orientation="horizontal"
                android:id="@+id/ll_header_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/blue_600"
                    android:textSize="@dimen/_19ssp"
                    android:fontFamily="@font/dm_sans_black"
                    android:text="@string/ceis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/blue_900"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/geist_mono_black"
                    android:text="@string/conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:contentDescription="@string/backstage"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/ll_header_login"
                android:src="@drawable/ic_arrow_back"
                android:contextClickable="true"
                android:background="@drawable/cf_ripple_pulse"
                android:padding="@dimen/_3sdp"
                android:id="@+id/back_stage"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"/>

            <TextView
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/back_stage"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/orange"
                android:textSize="@dimen/_8ssp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/alert_generate_code"
                android:id="@+id/info_ceis_conf_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/info_ceis_conf_date"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/blue_900"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/message_generate_code"
                android:id="@+id/alert_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/alert_login"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                android:textColor="@color/blue_900"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_30ssp"
                android:textAlignment="center"
                android:fontFamily="@font/geist_mono_medium"
                android:text="0000000000"
                android:id="@+id/code_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintBottom_toTopOf="@id/btn_generate_code"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/code_generate"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.1"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/blue_900"
                app:hintAnimationEnabled="true"
                android:gravity="center"
                android:hint="@string/dni"
                android:textColorHint="@color/blue_900"
                android:id="@+id/tl_dni"
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/cf_background_input"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:textColorHighlight="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:id="@+id/tf_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                app:backgroundTint="@null"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/tl_dni"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                android:text="@string/generate_code"
                android:textSize="@dimen/_9ssp"
                android:textAllCaps="true"
                android:paddingBottom="7dp"
                android:textColor="@color/blue_50"
                android:background="@drawable/cf_background_button"
                android:id="@+id/btn_generate_code"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_height="@dimen/_40sdp"/>

            <TextView
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/btn_generate_code"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textColor="@color/blue_900"
                android:textSize="@dimen/_8ssp"
                android:textAlignment="center"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/alert_problem_generate_code"
                android:id="@+id/alert_problem_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.05"
                android:orientation="vertical"
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.95"
                android:orientation="vertical"
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.97"
                android:orientation="horizontal"
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.03"
                android:orientation="horizontal"
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>